FIX: sidebar toggle right align.

--- a/source/css/_common/components/sidebar/sidebar-toggle.styl
+++ b/source/css/_common/components/sidebar/sidebar-toggle.styl
@@ -1,6 +1,6 @@
 .sidebar-toggle {
   position: fixed;
-  right: 50px;
+  right: $b2t-position-right;
   bottom: 45px;
   width: 15px;
   height: 15px;
